syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.example.grpchelloworld";

message GreetingPayload {
  string username = 1;
}

message GreetingResponse {
  string message = 1;
}

service GreetingService {
  rpc greeting(GreetingPayload) returns (GreetingResponse) {}
  rpc greetingClientStream(stream GreetingResponse) returns (GreetingPayload) {}
  rpc greetingServerStream(GreetingPayload) returns (stream GreetingResponse) {}
  rpc greetingBiDirectionalStream(stream GreetingResponse) returns (stream GreetingResponse) {}
}